# MCP_tool

./: .env  .gitignore  README.md  app.py  browser_mcp.json  browser_mcp.json.backup  full.py  main.py  pyproject.toml  temp_mcp.json  test.py  working_mcp.json
